Enable TS command in non-snapshot builds