@@ -149,20 +149,16 @@ public class TelemetryIT extends AbstractEsqlIntegTestCase {
             new Object[] {
                 new Test(
                     "TS time_series_idx | LIMIT 10",
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
-                        ? Map.ofEntries(Map.entry("TS", 1), Map.entry("LIMIT", 1))
-                        : Collections.emptyMap(),
+                    Map.ofEntries(Map.entry("TS", 1), Map.entry("LIMIT", 1)),
                     Map.ofEntries(),
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
+                    true
                 ) },
             new Object[] {
                 new Test(
                     "TS time_series_idx | STATS max(cpu) BY host | LIMIT 10",
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
-                        ? Map.ofEntries(Map.entry("TS", 1), Map.entry("STATS", 1), Map.entry("LIMIT", 1))
-                        : Collections.emptyMap(),
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled() ? Map.ofEntries(Map.entry("MAX", 1)) : Collections.emptyMap(),
-                    EsqlCapabilities.Cap.METRICS_COMMAND.isEnabled()
+                    Map.ofEntries(Map.entry("TS", 1), Map.entry("STATS", 1), Map.entry("LIMIT", 1)),
+                    Map.ofEntries(Map.entry("MAX", 1)),
+                    true
                 ) },
             new Object[] {
                 new Test(
